--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -11,7 +11,7 @@ db.hibernate.connection.CharSet=utf8
 db.hibernate.connection.characterEncoding=utf8
 db.hibernate.connection.useUnicode=true
 #EntityManager Configuration:
-db.entitymanager.packages.to.scan=com.test.javaproject.mvc.domain
+db.entitymanager.packages.to.scan=com.test.javaproject.mvc.domains
 #NotEmpty.userForm.name=Name is required!
 #NotEmpty.userForm.login=Login is required!
 #NotEmpty.userForm.password=Password is required!
