--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -6,7 +6,7 @@ db.password=root
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 db.hibernate.show_sql=true
-db.hibernate.hbm2ddl.auto=update
+db.hibernate.hbm2ddl.auto=validate
 db.hibernate.connection.CharSet=utf8
 db.hibernate.connection.characterEncoding=utf8
 db.hibernate.connection.useUnicode=true
