--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,6 +1,7 @@
 #DB properties:
 db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://127.0.0.1:5432/telephonebook
+#db.url=postgresql://postgresql:5432/telephonebook
 db.username=postgres
 db.password=root
 #Hibernate Configuration:
